--- a/menu/estilos.css
+++ b/menu/estilos.css
@@ -2,6 +2,7 @@
 
 body {
     width: 90%;
+    height: auto;
     margin-bottom: -10px;
     box-shadow: 10px 10px 10px 10px black;
     border: 3px solid rgba(90, 84, 84, 0.795);
@@ -105,9 +106,12 @@ nav h1 {
 button {
     color: black;
     background-color: white;
-    font-size: 15pt;
+    font-size: 10pt;
     padding: 10px;
-    margin: 15px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    margin: 10px;
+    border-radius: 15px;
 }
 
 button:hover {
