--- a/menu/estilos.css
+++ b/menu/estilos.css
@@ -105,26 +105,29 @@ nav h1 {
 
 button {
     color: black;
-    background-color: white;
+    background-color: rgba(207, 224, 224, 0.47);
     font-size: 10pt;
-    padding: 10px;
-    padding-top: 7px;
-    padding-bottom: 7px;
-    margin: 10px;
-    border-radius: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin: 3px;
+    border-radius: 10px;
 }
 
 button:hover {
     color: white;
-    background-color: rgba(0, 0, 0, .6);
+    background-color: rgba(0, 0, 0, .4);
+    cursor: pointer;
 }
 
 footer{
-    position: relative;
+    /* position: relative; */
     bottom: 0px;
-    width: 100%;
-    margin-bottom: 20px;
-    padding-top: 15px;
+    /* width: 100%; */
+    /* margin-bottom: 20px; */
+    margin-top: 25px;
+    padding-top: 1px;
     text-align: center;
 }
 
