--- a/menu/estilos.css
+++ b/menu/estilos.css
@@ -63,40 +63,43 @@ figcaption:hover {
 }
 
 nav menu {
-    display: vertical block;
-    
+    display: vertical block;    
 }
 
 nav ul {
     list-style: none;
     text-transform: uppercase;
-    padding-top: 50px;
+    padding-top: 20px;
 }
 
 nav li {
-    width: 500px;
+    width: 400px;
+    height: 30px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20pt;
-    background-color: rgb(179, 178, 178);
-    padding: 10px;
-    /* margin-right: 680px; */
-    margin-top: 10px;
+    background-color: rgb(210, 207, 207);
+    padding-bottom: 10px;
+    margin-top: 12px;
     text-align: center;
     box-shadow: 2px 2px 5px 2px black;
+    border-radius: 15px;
 }
 
 nav li a {
     color: black;
     text-decoration: none;
+    font-size: 20px;
+    
+}
+
+nav li a:hover{
+    color: rgba(0, 0, 0, 0.751);
+    font-size: 18pt;
 }
 
 nav li:hover {
-    background-color: #606060;
-}
-
-nav li a:hover {
-    color: white;
-
+    background-color: #787777a1;
+   
 }
 
 nav h1 {
@@ -106,6 +109,7 @@ nav h1 {
 button {
     color: black;
     background-color: rgba(207, 224, 224, 0.47);
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold' , sans-serif;
     font-size: 10pt;
     padding-left: 15px;
     padding-right: 15px;
@@ -116,9 +120,16 @@ button {
 }
 
 button:hover {
-    color: white;
-    background-color: rgba(0, 0, 0, .4);
+    color: black;
+    font-size: 12pt;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin: 0px;
+    background-color: rgba(0, 0, 0, .2);
     cursor: pointer;
+    box-shadow: 1px 1px 5px 1px black;
 }
 
 footer{
